[gd_scene load_steps=19 format=3 uid="uid://c6h4mclvhw0lw"]

[ext_resource type="Script" uid="uid://burh7k5amw4xo" path="res://scripts/notes_card.gd" id="1_3b3cw"]
[ext_resource type="Script" uid="uid://0760ne8vdv83" path="res://scripts/title_bar_panel_container.gd" id="1_vr81w"]
[ext_resource type="Texture2D" uid="uid://crox5g2si2tf6" path="res://img/icons8-plus (1).svg" id="3_i1xss"]
[ext_resource type="Texture2D" uid="uid://b60aiw2n77udu" path="res://img/icons8-close (1).svg" id="4_brqfy"]
[ext_resource type="Texture2D" uid="uid://krsfcacnvjo4" path="res://img/icons8-trash (1).svg" id="4_ix7j5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i1xss"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6utue"]
bg_color = Color(0.254902, 0.254902, 0.254902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vr81w"]
bg_color = Color(0.347817, 0.347817, 0.347817, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3b3cw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_038a5"]
bg_color = Color(0.313726, 0.313726, 0.313726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_brqfy"]
bg_color = Color(0.611765, 0.611765, 0.611765, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i1xss"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6utue"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vr81w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_038a5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_brqfy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m187b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ix7j5"]
content_margin_left = 10.0
content_margin_right = 5.0

[node name="NotesWindow" type="Window"]
sdf_oversize = 0
position = Vector2i(96, 300)
size = Vector2i(288, 150)
borderless = true
always_on_top = true
min_size = Vector2i(288, 150)
content_scale_size = Vector2i(288, 150)
script = ExtResource("1_3b3cw")

[node name="NotesCard" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(288, 150)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_i1xss")

[node name="Background" type="Panel" parent="NotesCard"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6utue")

[node name="MainContainer" type="VBoxContainer" parent="NotesCard"]
layout_mode = 2

[node name="TitleBarPanelContainer" type="PanelContainer" parent="NotesCard/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_vr81w")
script = ExtResource("1_vr81w")

[node name="TitleBar" type="HBoxContainer" parent="NotesCard/MainContainer/TitleBarPanelContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 0

[node name="AddButton" type="Button" parent="NotesCard/MainContainer/TitleBarPanelContainer/TitleBar"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_3b3cw")
theme_override_styles/hover = SubResource("StyleBoxFlat_038a5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_brqfy")
theme_override_styles/normal = SubResource("StyleBoxEmpty_i1xss")
icon = ExtResource("3_i1xss")

[node name="Spacer" type="Panel" parent="NotesCard/MainContainer/TitleBarPanelContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_6utue")

[node name="DeleteButton" type="Button" parent="NotesCard/MainContainer/TitleBarPanelContainer/TitleBar"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_vr81w")
theme_override_styles/hover = SubResource("StyleBoxFlat_038a5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_brqfy")
theme_override_styles/normal = SubResource("StyleBoxEmpty_038a5")
icon = ExtResource("4_ix7j5")

[node name="CloseButton" type="Button" parent="NotesCard/MainContainer/TitleBarPanelContainer/TitleBar"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_brqfy")
theme_override_styles/hover = SubResource("StyleBoxFlat_038a5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_brqfy")
theme_override_styles/normal = SubResource("StyleBoxEmpty_m187b")
icon = ExtResource("4_brqfy")

[node name="NoteBody" type="TextEdit" parent="NotesCard/MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxEmpty_ix7j5")
placeholder_text = "Take a note...       "
wrap_mode = 1
scroll_smooth = true

[node name="DebounceTimer" type="Timer" parent="NotesCard"]
wait_time = 2.0
one_shot = true
